ch21/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubebook-ch21-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: kubebook-ch21-worker:1
