ch21/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubebook-ch21-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kubebook-ch21-pgdata
      containers:
        - name: postgres
          image: postgres:18.6-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: kubebook-ch21-postgres
spec:
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
