ch21/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubebook-ch21-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:8.2.10-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: kubebook-ch21-redis
spec:
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
