ch21/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubebook-ch21-ingress
spec:
  ingressClassName: cloud-provider-kind
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubebook-ch21-api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubebook-ch21-web
                port:
                  number: 80
